# chess-engine

./: .gitignore  CMakeLists.txt  README.md
src/: bishop.cc  bishop.hh  board.cc  board.hh  engine.cc  engine.hh  game.cc  game.hh  human.cc  human.hh  king.cc  king.hh  knight.cc  knight.hh  legal_moves.cc  legal_moves.hh  main.cc  minmax.cc  minmax.hh  move.cc  move.hh  params.hh  pawn.cc  pawn.hh  piece.cc  piece.hh  pieces.hh  player.cc  player.hh  queen.cc  queen.hh  rook.cc  rook.hh  state.cc  state.hh  testi.cc  tile.cc  tile.hh  user_interface.cc  user_interface.hh
